Fixed positioning of navbar-collapse.on

--- a/app/assets/stylesheets/bootstrap_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_overrides.css.scss
@@ -260,6 +260,8 @@ legend {
     background: #6d6e71;
     border: none;
     border-color: transparent;
+    position: relative;
+    z-index: 999999;
   }
   .navbar-toggle {
     top: 20px;
